# python-pptx-stubs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: draft-release.yml  publish-pypi.yml
pptx-stubs/: __init__.pyi  action.pyi  api.pyi  exc.pyi  media.pyi  package.pyi  presentation.pyi  shared.pyi  slide.pyi  spec.pyi  table.pyi  types.pyi  util.pyi
pptx-stubs/chart/: axis.pyi  category.pyi  chart.pyi  data.pyi  datalabel.pyi  legend.pyi  marker.pyi  plot.pyi  point.pyi  series.pyi  xlsx.pyi  xmlwriter.pyi
pptx-stubs/dml/: chtfmt.pyi  color.pyi  effect.pyi  fill.pyi  line.pyi
pptx-stubs/enum/: action.pyi  base.pyi  chart.pyi  dml.pyi  lang.pyi  shapes.pyi  text.pyi
pptx-stubs/opc/: oxml.pyi  package.pyi  packuri.pyi  serialized.pyi  shared.pyi  spec.pyi
pptx-stubs/oxml/: __init__.pyi  action.pyi  coreprops.pyi  ns.pyi  presentation.pyi  simpletypes.pyi  slide.pyi  table.pyi  text.pyi  theme.pyi  xmlchemy.pyi
pptx-stubs/oxml/chart/: axis.pyi  chart.pyi  datalabel.pyi  legend.pyi  marker.pyi  plot.pyi  series.pyi  shared.pyi
pptx-stubs/oxml/dml/: color.pyi  fill.pyi  line.pyi
pptx-stubs/oxml/shapes/: __init__.pyi  autoshape.pyi  connector.pyi  graphfrm.pyi  groupshape.pyi  picture.pyi  (+1 more)
pptx-stubs/parts/: chart.pyi  coreprops.pyi  embeddedpackage.pyi  image.pyi  media.pyi  presentation.pyi  slide.pyi
pptx-stubs/shapes/: __init__.pyi  autoshape.pyi  base.pyi  connector.pyi  freeform.pyi  graphfrm.pyi  group.pyi  picture.pyi  placeholder.pyi  shapetree.pyi
pptx-stubs/text/: fonts.pyi  layout.pyi  text.pyi
